...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="subtotal">Subtotal</string>
    <string name="products_total">Products total</string>
    <string name="discount">Discount</string>
    <string name="details">Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="install">Install</string>
    <string name="update_downloaded">Woo has downloaded an update</string>
    <string name="update_failed">Woo update has failed</string>
    <string name="continue_button">Continue</string>
    <string name="refresh_button">Refresh</string>
    <string name="untitled">Untitled</string>
...
    <string name="orderlist_search_hint">Search orders</string>
    <string name="orderlist_filtered" translatable="false">: %1$s</string>
    <string name="orderlist_loading">Looking up your orders…</string>
    <!--
        Order Detail Views
    -->
    <string name="customer_information">Customer information</string>
    <string name="customer_full_name">%1$s %2$s</string>
    <string name="orderdetail_orderstatus_ordernum">Order #%s</string>
    <string name="orderdetail_orderstatus_heading">#%1$s %2$s %3$s</string>
    <string name="orderdetail_orderstatus_created">Created %1$s</string>
    <string name="orderdetail_shipping_method">Shipping method</string>
    <string name="orderdetail_shipping_details">Shipping details</string>
    <string name="orderdetail_billing_details">Billing details</string>
    <string name="orderdetail_email_contentdesc">email customer</string>
    <string name="orderdetail_call_or_message_contentdesc">Call or message customer</string>
    <string name="orderdetail_call_customer">Call</string>
    <string name="orderdetail_message_customer">Message</string>
    <string name="orderdetail_product_lineitem_total_multiple">%1$s (%2$s x %3$s)</string>
...
    <string name="orderdetail_customer_image_contentdesc">Customer profile image</string>
    <string name="orderdetail_note_hint">Compose an order note</string>
    <string name="orderdetail_note_private">Private</string>
    <string name="orderdetail_note_public">To customer</string>
    <string name="orderdetail_note_system">System</string>
    <string name="orderdetail_order_notes">Order notes</string>
    <string name="orderdetail_order_fulfillment">Fulfill Order #%s</string>
    <string name="orderdetail_payment_cleared">Payment Cleared</string>
    <string name="orderdetail_show_billing">Show Billing</string>
    <string name="orderdetail_hide_billing">Hide Billing</string>
    <string name="orderdetail_add_note">Add a note</string>
    <string name="orderdetail_addnote_contentdesc">Add an order note</string>
    <string name="orderdetail_change_order_status">Click to change order status</string>
...
    <string name="orderdetail_delete_tracking">Delete tracking</string>
    <string name="orderdetail_empty_shipping_address">No address specified.</string>
    <string name="orderdetail_shipping_notice">This order is using extensions to calculate shipping. The shipping methods shown might be incomplete.</string>
    <string name="orderdetail_issue_refund_button">Issue refund</string>
    <string name="order_begin_fulfillment">Begin fulfillment</string>
    <string name="order_fulfill_mark_complete">Mark Order Complete</string>
    <string name="order_fulfill_marked_complete">Order Marked Complete</string>
    <string name="order_status_changed_to">Order status changed to %s</string>
    <string name="order_error_fetch_notes_generic">Error fetching error notes</string>
    <string name="order_error_update_general">Error changing order</string>
    <string name="order_error_fetch_generic">Error fetching order</string>
    <string name="order_shipment_tracking">Tracking</string>
    <string name="order_shipment_tracking_number">Tracking Number</string>
    <string name="order_shipment_tracking_number_clipboard">Tracking number copied to the clipboard</string>
    <string name="order_shipment_tracking_button">Track package</string>
    <string name="order_detail_shipment_tracking_button_contentdesc">Track or delete shipment tracking</string>
...
