...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Woo.Card"/>

        <!-- Customer Info -->
        <co.innoshop.android.ui.orders.OrderDetailCustomerInfoView
            android:id="@+id/orderFulfill_customerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Woo.Card.Expandable"/>

        <!-- Add Optional Shipment Tracking -->
        <co.innoshop.android.ui.orders.OrderDetailShipmentTrackingListView
...
            android:contentDescription="@string/order_shipment_tracking_add_label"
            android:visibility="gone"
            tools:visibility="visible"/>

        <!-- Button: Mark Order Complete -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/orderFulfill_btnComplete"
            style="@style/Woo.Button.Purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
...
