...
                                                   android:id="@+id/snack_root"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="co.innoshop.android.ui.orders.AddOrderTrackingProviderListFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"/>

    <LinearLayout
        android:id="@+id/providersView"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
